<resources>
    <string name="app_name">DocSites</string>
    <string name="hbsmmu">BSMMU</string>
    <string name="hbmdc">BMDC</string>
    <string name="hbcps">BCPS</string>
    <string name="hdghs">DGHS</string>
    <string name="hmohf">MOHFW</string>
    <string name="hbpsc">BPSC</string>
    <string name="hgazettes">Gazette</string>
    <string name="hresult">MBBS/BDS</string>
    <string name="hdgfp">DGFP</string>
    <string name="hccd">CCD</string>
    <string name="bsmmu">বঙ্গবন্ধু শেখ মুজিব মেডিকেল\nবিশ্ববিদ্যালয়</string>
    <string name="mohf">পদোন্নতি,পদায়ন,ডেপুটেশন\nএডহক নিয়মিতকরণ</string>
    <string name="bpsc">বাংলাদেশ সরকারি কর্ম \nকমিশন</string>
    <string name="gazettes">বাংলাদেশ সরকারি মুদ্রণালয়\n(বি.জি.প্রেস)</string>
    <string name="dghs">স্বাস্থ্য অধিদপ্তর\n</string>
    <string name="result">মেডিকেল ও ডেন্টাল\nভর্তি পরীক্ষার ফলাফল</string>
    <string name="bcps">Bangladesh College of\nPhysicians and Surgeons</string>
    <string name="bmdc">Bangladesh Medical and\nDental Council</string>
    <string name="dgpf">পরিবার পরিকল্পনা অধিদপ্তর\n</string>
    <string name="ccd">Certificate Course\non Diabetology</string>
    <string name="homePage">Home page</string>
    <string name="bsmmuHints">Residency, non-Residency,\nNotice</string>
    <string name="bcpsHints">Guidelines, pdf forms\nFCPS, MCPS Results</string>
    <string name="dghsHints">বদলি/পদায়ন, HRM,\nবুনিয়াদি প্রশিক্ষণ</string>
    <string name="mohfwHints">ডেপুটেশন নীতিমালা ২০১৩\nবিভিন্ন কোর্সে আসন সংখ্যা</string>
    <string name="bpscHints">BCS, Departmental exam,\nSenior Scale Exam</string>
    <string name="gazetteHints">সিনিয়র স্কেল, ডিপার্টমেন্টাল,\nচাকুরি স্থায়ীকরণ</string>
    <string name="bmdcHints">Find Registered Doctor\nRegistration/renewal forms</string>
    <string name="resultsHints"> </string>
    <string name="dgfpHints">অফিস আদেশ, নোটিশ\nএনওসি</string>
    <string name="ccdHints">Admission, Exam and\nother Notices</string>
    <string name="residency">Residency/Non Residency</string>
    <string name="admissionEreregi">Admission and e-Registration</string>
    <string name="academic_notice">Academic notice</string>
    <string name="administrative_notice">Administrative notice</string>
    <string name="courseName_and_duratin">Duration of different Residency courses</string>
    <string name="affiliated_institution">Institutions with their courses</string>
    <string name="onlineNotic">Online Notice</string>
    <string name="guideline">Guidelines and Downloadable forms</string>
    <string name="registrationFCPS">Registration (FCPS Part-I Pass Trainees)</string>
    <string name="rollResultFCPS">Results by Roll Number</string>
    <string name="fcpsresult">Examination Only Final Result (PDF)\nPart-I, Part-II, MCPS</string>
    <string name="courseFee">Exam fees</string>
    <string name="training_institute">Institutes affiliated by the BCPS for imparting training and conducting courses</string>
    <string name="courseCurriculum">Course curriculum</string>
    <string name="refundExamFees">Procedure of refund Exam fees</string>
    <string name="refundExamFeesText">In case a candidate wishes not to appear in any of the examinations of the College after submission of application, he must apply to College on or before the 27th May for the July examination and on or before the 27th November for the January examination about his intention to withdraw. In these circumstances the candidate is eligible to get a refund of his fee after a 25% deduction. No application will be entertained after the date mentioned above and the fee will not be freewill not be refunded.</string>
    <string name="homePageNotice">Home Page Notices and\nFoundation Training orders</string>
    <string name="posting">বদলি/পদায়ন আদেশ</string>
    <string name="hrm">HRM</string>
    <string name="deputation">সংশোধিত ডেপুটেশন নীতিমালা ২০১৩\nবিভিন্ন কোর্সে বিদ্যমান আসন সংখ্যা\nদুর্গম উপজেলার তালিকা</string>
    <string name="deputationOrders">ডেপুটেশন আদেশ</string>
    <string name="bcsHealth">বিসিএস</string>
    <string name="assistantProfessorOption">সহকারী অধ্যাপকঃ পদোন্নতি/পদায়ন </string>
    <string name="associateProfessorOption">সহযোগী অধ্যাপকঃ পদোন্নতি/পদায়ন</string>
    <string name="juniorConsultantOption">জুনিয়র কনসালট্যান্টঃ পদোন্নতি/পদায়ন</string>
    <string name="seniorConsultantOption">সিনিয়র কনসালট্যান্টঃ/সিনিয়র স্কেল পদোন্নতি/পদায়ন</string>
    <string name="professorOption">অধ্যাপকঃ পদোন্নতি/পদায়ন</string>
    <string name="assistantSurgeonOption">(বিসিএস) সহকারী সার্জন পদে পদায়ন</string>
    <string name="civilSurgeonOption">সহকারী পরিচালক/সিভিল সার্জন/সমমান পদের বিজ্ঞপ্তি</string>
    <string name="adhokOpion">এডহকঃ নিয়মিতকরণ</string>
    <string name="bcsOnline">বিসিএস পরীক্ষার অনলাইন রেজিস্ট্রেশন</string>
    <string name="departmentalOnline">বিভাগীয় পরীক্ষার অনলাইন রেজিস্ট্রেশন</string>
    <string name="seniorOnline">সিনিয়র স্কেল পরীক্ষার অনলাইন রেজিস্ট্রেশন</string>
    <string name="bcsResult">বিসিএস পরীক্ষার নোটিশ ও ফলাফল</string>
    <string name="departmentalResult">বিভাগীয় পরীক্ষার নোটিশ ও ফলাফল</string>
    <string name="seniorResult">সিনিয়র স্কেল পরীক্ষার নোটিশ ও ফলাফল</string>
    <string name="forms">বিপিএসসি ফর্মসমূহ\n(BPSC form-2, BPSC form-3)</string>
    <string name="findDoctor">Find Registered Doctors</string>
    <string name="bmdcDownloadbleForms">Registration forms:\nTemporary/Renewal</string>
    <string name="mbbs">Results of MBBS</string>
    <string name="bds">Results of BDS</string>
    <string name="dgfporder">অফিস আদেশ</string>
    <string name="dgfpnotice">নোটিশ</string>
    <string name="dgfpnoc">এনওসি</string>
    <string name="ccdHome">Results of MBBS</string>
    <string name="ccdNotices">Admission, Exam and Class Schedule</string>
    <string name="seniorScaleOption"><b>সিনিয়র স্কেল পরীক্ষার গেজেট</b></string>
    <string name="departmentalOption"><b>ডিপার্টমেন্টাল পরীক্ষার গেজেট</b></string>
    <string name="serviceConfirmOption"><b>চাকুরি স্থায়ীকরণের গেজেট</b></string>
    <string name="weeklyGazette"><b>বি.জি. প্রেস থেকে প্রকাশিত চাকুরি স্থায়ীকরণের গেজেট</b></string>
    <string name="app_id">ca-app-pub-6830488664932459~9748086330</string>
    <string name="banner_id_home">ca-app-pub-6830488664932459/9397281285</string>
    <string name="banner_id_browser">ca-app-pub-6830488664932459/8958297583</string>
    <string name="banner_id_gazette">ca-app-pub-6830488664932459/4536122256</string>
    <string name="banner_id_notification_summery">ca-app-pub-6830488664932459/5086501189</string>
    <string name="forum_interstitial">ca-app-pub-6830488664932459/4069218398</string>
    <string name="notification">Select the notifications you want daily</string>
    <string name="residencySetting">1. BSMMU: (For residents only) exam notice for phase A, phase B, results</string>
    <string name="noticeSetting">2. Diploma, M.Phil admission notice, seat plan, result and other administrative notice</string>
    <string name="dghsSetting">3. Foundation training orders and other orders from DGHS</string>
    <string name="resultBcsSetting"><b>4. BCS exam:</b> Results and other notice</string>
    <string name="regiDeptSetting"><b>5. Departmental exam:</b> Notify me when online registration starts</string>
    <string name="resultDeptSetting"><b>6. Departmental exam:</b> Results and other notice</string>
    <string name="regiSeniorSetting"><b>7. Senior Scale exam:</b> Notify me when online registration starts</string>
    <string name="resultSeniorSetting"><b>8. Senior Scale exam:</b> Results and other notice</string>
    <string name="assistantSurgeonSetting">9. (বিসিএস) সহকারী সার্জন পদে পদায়ন</string>
    <string name="juniorConsultantSetting">10. জুনিয়র কনসালট্যান্টঃ পদোন্নতি/পদায়ন</string>
    <string name="seniorConsultantSetting">11. সিনিয়র কনসালট্যান্টঃ পদোন্নতি/পদায়ন</string>
    <string name="assistantProfessorSetting">12. সহকারী অধ্যাপকঃ পদোন্নতি/পদায়ন</string>
    <string name="associateProfessorSetting">13. সহযোগী অধ্যাপকঃ পদোন্নতি/পদায়ন</string>
    <string name="professorSetting">14. অধ্যাপকঃ পদোন্নতি/পদায়ন</string>
    <string name="civilSurgeonSetting">15. সহকারী পরিচালক/সিভিল সার্জন/সমমান পদের বিজ্ঞপ্তি</string>
    <string name="adhocSetting">16. এডহকঃ নিয়মিতকরণ</string>
    <string name="mohfwSetting">17. স্বাস্থ্য ও পরিবার কল্যাণ মন্ত্রণালয়ে নতুন বদলি/পদায়ন/প্রজ্ঞাপন</string>
    <string name="leaveSetting">18. অর্জিত ছুটি, বহিরাগমন, লিয়েন</string>
    <string name="dgfpSetting">19. পরিবার পরিকল্পনা অধিদপ্তর (আদেশ, নোটিশ, এনওসি)</string>
    <string name="ccdSetting">20. CCD- Admission, exam, notice</string>
    <string name="leaveOpion">অর্জিত ছুটি, বহিরাগমন, লিয়েন</string>
    <string name="regideptStarted">Registration for Departmental Exam has been started. Click to go for Registration</string>
    <string name="regiseniortext">11. Registration for Senior Scale Exam has been started. Click to go for Registration</string>
    <string name="regiExpired">Oline registration date is expired</string>
    <string name="soundSetting">Allow notification sound</string>
    <string name="vibrateSetting">Allow notification vibration</string>
    <string name="connectivity">Allow network connectin alert</string>
    <string name="noData">You missed today\'s notification.\nFollow the steps to get notifications\nStep 1. Turn on Wi-Fi or mobile data\nStep 2. click this notification or open DocSites app </string>
    <string name="dgfpOrderTitle">পরিবার পরিকল্পনা অধিদপ্তর\n(আদেশ)</string>
    <string name="dgfpNoticeTitle">পরিবার পরিকল্পনা অধিদপ্তর\n(নোটিশ)</string>
    <string name="dgfpNOCTitle">পরিবার পরিকল্পনা অধিদপ্তর\n(এনওসি)</string>
    <string name="seniorGazette">সিনিয়র স্কেল</string>
    <string name="departmentalGazette">ডিপার্টমেন্টাল</string>
    <string name="service">স্থায়ীকরণ</string>
    <string name="service2">স্থায়ীকরণ</string>
    <string name="filterDepartmental">অর্ধ-বার্ষিকী বিভাগীয়</string>
    <string name="filterSeniorScale">সিনিয়র স্কেল</string>
    <string name="filterGazette">appointments, promotions, transfers</string>
    <string name="assistantProfessor">সহকারী অধ্যাপক</string>
    <string name="associateProfessor">সহযোগী অধ্যাপক</string>
    <string name="juniorConsultant">জুনিয়র</string>
    <string name="seniorConsultant">সিনিয়র</string>
    <string name="seniorConsultant2">সিনিয়র</string>
    <string name="professor">(অধ্যাপক পদে</string>
    <string name="assistantSurgeon">সহকারী সার্জন</string>
    <string name="civilSurgeon">সিভিল সার্জন</string>
    <string name="adhoc">এডহক</string>
    <string name="weeklyGazetteHeading">সাপ্তাহিক গেজেট</string>
    <string name="about"><b><font color="blue">DR. ZUBAYER AHMED</font></b>\n\nMymensingh Medical College (M42)\n\nMedical Officer\n\nGovernment of People\'s Republic of Bangladesh\n\n33rd Batch of Bangladesh Civil Service (Health)\n\nContact:\n<b>zubayer.developer@gmail.com</b>
    </string>
    <string name="settingDialog">\nManage your notifications\n</string>
    <string name="vloumeHeading">\বছর</string>
    <string name="vloumes">গেজেট</string>
    <string name="volumeNavigation">পরবর্তী\nপৃষ্ঠা</string>
    <string name="volume">ভলিউম</string>
    <string name="text">\⇦ লিস্ট থেকে বছর নির্বাচন করুন</string>
    <string name="openInBrowser">Links Open in Browser</string>
    <string name="browseralert">খেয়াল করুনঃ \n\nযদি কোন কিছু লোড না হয় বা লোড হতে সময় লাগে সেক্ষেত্রেঃ\n\n** অপশন থেকে বারবার Reload বাটন চাপুন \n\n** কাজ না হলে অপশন থেকে Download বাটন চাপুন\n\n** এতেও কাজ না হলে অপশন থেকে Open in External browser চাপুন\n\n** পরীক্ষার ফর্ম পূরণের ক্ষেত্রে এই অ্যাপের মাধ্যমে ছবি বা সিগনেচার আপলোড সম্ভব নয়, সেক্ষেত্রে ফর্মের পেইজ ওপেন হবার পর অপশন থেকে Open in External browser চাপুন</string>
    <string name="exit">\nGet help from doctors community for any kind of problem\n</string>
    <string name="facebook_app_id">2166278010315392</string>
    <string name="fb_login_protocol_scheme">fb2166278010315392</string>
</resources>