<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="7dp"
    android:paddingRight="5dp"
    android:paddingLeft="5dp"
    android:orientation="vertical"
    >
    <ScrollView
        android:background="@drawable/bcsdept"
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:paddingBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <CheckBox
                android:textColor="#AA7E02"
                android:textSize="20sp"
                android:id="@+id/openInbrowser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:checked="true"
                android:text="@string/openInBrowser" />
            <CheckBox
                android:textColor="#AA7E02"
                android:textSize="20sp"
                android:id="@+id/soundSetting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:checked="true"
                android:text="@string/soundSetting" />
            <CheckBox
                android:textColor="#59038D"
                android:textSize="20sp"
                android:id="@+id/vibrateSetting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:checked="true"
                android:text="@string/vibrateSetting" />
    <TextView
        android:id="@+id/settingHeading"
        android:background="@drawable/bcsdept"
        android:textColor="#123456"
        android:gravity="center"
        android:textSize="25sp"
        android:text="@string/notification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="30dp"/>
    <LinearLayout
        android:padding="0.5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:textColor="#009900"
            android:textSize="18sp"
            android:id="@+id/select"
            android:text="Select All"
            android:background="@drawable/bcsdept"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
        <Button
            android:textColor="#990000"
            android:textSize="18sp"
            android:id="@+id/deselect"
            android:text="Deselect All"
            android:background="@drawable/bcsdept"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
    </LinearLayout>
            <CheckBox
                android:id="@+id/residencySetting"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:checked="true"
                android:text="@string/residencySetting" />

            <CheckBox
                android:id="@+id/noticeSetting"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:checked="true"
                android:text="@string/noticeSetting" />

            <CheckBox
                android:id="@+id/DGHSSetting"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:checked="true"
                android:text="@string/dghsSetting" />

            <CheckBox
                android:id="@+id/bcsResultSetting"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:checked="true"
                android:text="@string/resultBcsSetting" />

            <CheckBox
                android:id="@+id/regiDeptSetting"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:checked="true"
                android:text="@string/regiDeptSetting" />

            <CheckBox
                android:id="@+id/deptResultSetting"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:checked="true"
                android:text="@string/resultDeptSetting" />

            <CheckBox
                android:id="@+id/regiSeniorSetting"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:checked="true"
                android:text="@string/regiSeniorSetting" />
            <CheckBox
                android:id="@+id/seniorResultSetting"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:checked="true"
                android:text="@string/resultSeniorSetting" />
            <CheckBox
                android:id="@+id/assistantSurgeonSetting"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:checked="true"
                android:text="@string/assistantSurgeonSetting" />
            <CheckBox
                android:id="@+id/deputationSetting"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:checked="true"
                android:text="@string/deputationOrders" />
            <CheckBox
                android:id="@+id/juniorConsultantSetting"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:checked="true"
                android:text="@string/juniorConsultantSetting" />
            <CheckBox
                android:id="@+id/seniorConsultantSetting"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:checked="true"
                android:text="@string/seniorConsultantSetting" />
            <CheckBox
                android:id="@+id/assistantProfessorSetting"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:checked="true"
                android:text="@string/assistantProfessorSetting" />
            <CheckBox
                android:id="@+id/associateProfessorSetting"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:checked="true"
                android:text="@string/associateProfessorSetting" />
            <CheckBox
                android:id="@+id/professorSetting"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:checked="true"
                android:text="@string/professorSetting" />
            <CheckBox
                android:id="@+id/civilSergeonSetting"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:checked="true"
                android:text="@string/civilSurgeonSetting" />
            <CheckBox
                android:id="@+id/adhocSetting"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:checked="true"
                android:text="@string/adhocSetting" />
            <CheckBox
                android:id="@+id/mohfwSetting"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:checked="true"
                android:text="@string/mohfwSetting" />
            <CheckBox
                android:id="@+id/leaveSetting"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:checked="true"
                android:text="@string/leaveSetting" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="30dp"
                android:textColor="#123456"
                android:textSize="25dp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
