<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="7dp"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/weeklyGazetteHeading"
            android:textColor="#62330E"
            android:textSize="30sp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="5dp"
            android:paddingRight="5dp">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="25dp">

                <TableRow>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="6"
                        android:gravity="center"
                        android:text="@string/vloumes"
                        android:textSize="15dp"></TextView>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:text="@string/volumeNavigation"
                        android:textSize="15dp">

                    </TextView>
                </TableRow>

                <TableRow>

                    <ListView
                        android:id="@+id/volume"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="6"
                        android:background="@drawable/bcsdept"
                        android:paddingBottom="50dp"
                        android:scrollbars="none"
                        android:textAlignment="center" />

                    <ListView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.1"
                        android:paddingBottom="50dp"
                        android:scrollbars="none" />

                    <ListView
                        android:id="@+id/navigation"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1.7"
                        android:background="@drawable/bcsdept"
                        android:paddingBottom="50dp"
                        android:scrollbars="none"
                        android:textAlignment="center" />
                </TableRow>
            </TableLayout>
        </LinearLayout>

        <com.google.android.gms.ads.AdView
            android:id="@+id/adViewGazette"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            ads:adSize="SMART_BANNER"
            ads:adUnitId="@string/banner_id_seniorvice" />
    </RelativeLayout>
</LinearLayout>